# opencv-video-streaming

./: .gitignore  CMakeLists.txt  README.md  client  client.cpp  server  server.cpp
