cmake_minimum_required(VERSION 2.8)
project( Streamer )
find_package( OpenCV REQUIRED )
find_package (Threads REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( client client.cpp )
add_executable( server server.cpp )
target_link_libraries( server ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} )
target_link_libraries( client ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT} ) 
